2004-09-28  Adam Fedor  <fedor@gnu.org>

	* Classes/NSPanelTest/NSPanelTest.m: Make NSPanelTest an application 
	delegate. Reindent. Fix compiler warnings.
	* Classes/NSPanelTest/GNUmakefile: Don't make NSPanelTest the app class.
	* Classes/NSPanelTest/NSPanelTestInfo.plist: New file.
	* Classes/NSPanelTest/NSPanelTest_main.m: Use normal app startup 
	function.

	* Classes/NSScreenTest/screen_main.m: Fix warning.
	* GPuzzle/BTree.m, GPuzzle/Document.m: Remove unused vars, Fix warnings.
	* GPuzzle/GNUmakefile: Don't define GNUSTEP_MAKEFILES.

2004-04-15  Quentin Mathe <qmathe@club-internet.fr>
	
	* ToolbarExample: Added a demo application for the toolbar
	implementation.
	* ToolbarExample/GNUmakefile: New file
	* ToolbarExample/ToolbarExampleInfo.plist: idem.
	* ToolbarExample/main.m : idem.
	* ToolbarExample/Controller.h: idem.
	* ToolbarExample/Controller.m: idem.
	* ToolbarExample/MiniController.h: idem.
	* ToolbarExample/MiniController.m: idem.
	* ToolbarExample/ToolbarExample.gorm/data.classes: idem.
	* ToolbarExample/ToolbarExample.gorm/objects.gorm: idem.
	* ToolbarExample/SecondWindow.gorm/data.classes: idem.
	* ToolbarExample/SecondWindow.gorm/objects.gorm: idem.
	* ToolbarExample/Images/FileIcon_Directory.tiff: idem.
	* ToolbarExample/Images/RecyclerFull.tiff: idem.
	* ToolbarExample/Images/SecondImage.tiff: idem.

Sat Mar  6 13:57:07 2004  Brent Fulgham <bfulg@pacbell.net>,
 	                  Nicola Pero  <n.pero@mi.flashnet.it>
	
	* Classes/NSPanelTest/GNUmakefile: Tidied - use GNUSTEP_MAKEFILES,
	do not set GNUSTEP_INSTALLATION_DIR, and do not include additional
	makefiles.

2004-02-18  Adam Fedor  <fedor@gnu.org>

	* Classes/NSImage: New
	* Old/nsimage.m: Remove.

2003-11-19 17:02  Alexander Malmberg <alexander@malmberg.org>

	* ExampleService/*: Move example.service and md5Digest.app here
	from gui/Tools/.

2003-08-25  David Ayers  <d.ayers@inode.at>

	* *.h/m: Update to new header structure.

2003-07-26  Fred Kiefer <FredKiefer@gmx.de>
